--- a/index.html
+++ b/index.html
@@ -4,42 +4,49 @@
 <head>
     <title>Landing Page</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div class="header-logo">Header Logo</div>
         <div class="header-links">
-            <div>header link one</div>
-            <div>header link two</div>
-            <div>header link three</div>
+            <div class="link">header link one</div>
+            <div class="link">header link two</div>
+            <div class="link">header link three</div>
         </div>
     </div>
 
     <div class="header-body">
-        <div class="title">This website is awesome</div>
-        <div class="title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-        <button type="button">Sign up</button>
-        <div class="img-placeholder">this is a placeholder for an image</div>
+        <div class="title-container">
+            <div class="title">This website is awesome</div>
+            <div class="title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button type="button">Sign up</button>
+        </div>
+        <div class="placeholder">
+            <div class="img-placeholder">this is a placeholder for an image</div>
+        </div>
     </div>
 
     <div class="random-container">
         <div class="random-title">Some random information.</div>
-        <div class="random-imgs">
-            <div class="box"></div>
-            <div class="random-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="random-imgs">
-            <div class="box"></div>
-            <div class="random-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="random-imgs">
-            <div class="box"></div>
-            <div class="random-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="random-imgs">
-            <div class="box"></div>
-            <div class="random-text">this is some subtext under an illustration or image</div>
+        <div class="img-container">
+            <div class="random-imgs">
+                <div class="box"></div>
+                <div class="random-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="random-imgs">
+                <div class="box"></div>
+                <div class="random-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="random-imgs">
+                <div class="box"></div>
+                <div class="random-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="random-imgs">
+                <div class="box"></div>
+                <div class="random-text">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 
@@ -51,6 +58,11 @@
     <div class="bottom-box">
         <div class="call-action">Call to action! It's time!</div>
         <div class="bottom-text">Sign up for our product by clicking that button right over there!</div>
+        <button type="button">Sign up</button>
+    </div>
+
+    <div class="footer">
+        <div class="footer-text">Copyright &#169 The Odin Project 2021</div>
     </div>
 
 </body>
