--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
     </div>
 
     <div class="bottom-box">
-        <div class="call-action">Call to action! It's time!</div>
-        <div class="bottom-text">Sign up for our product by clicking that button right over there!</div>
-        <button type="button">Sign up</button>
+        <div class="action-box">
+            <div class="call-action">Call to action! It's time!</div>
+            <div class="bottom-text">Sign up for our product by clicking that button right over there!</div>
+            <button id="button2">Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
